# jaxted

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/: basic.py  event_data.py  ripple_utils.py  toy_model.py
py/jaxted/: __init__.py  bilby.py  bounding.py  dynamicsampler.py  dynesty.py  nest.py  nestedsamplers.py  nssmc.py  numpyro.py  plotting.py  random.py  sampler.py  sampling.py  smc.py  utils.py
